Refactor HTML structure and content for clarity

--- a/html/2026goals/pimapunisher.html
+++ b/html/2026goals/pimapunisher.html
@@ -122,30 +122,54 @@
 <br>
 
 <h2>1/22</h2>
-<p>Razors Edge V0</p>
-<p>Simple Solution V1</p>
-<p>Top Hat V0</p>
-<p>Book of Fun V0</p>
-<p>Leftovers V0</p>
-<p>Desperation Alley V1</p>
-<p>Trick Or Treat V3</p>
-<p>The Flake of Destiny V5</p>
-<p>No Flakes Given V2</p>
-<p>Frosted Flakes V0</p>
-<p>Outer Limits V0</p>
-<p>No Limits V0</p>
-<p>Limited Choss V0</p>
-<p>Sunday School V0</p>
-<p>Arrowhead V1</p>
-<p>Slick Trip V0</p>
-<p>Projected V3</p>
-<p>Two Scoops V3</p>
-<p>Wheat Thin V3</p>
-<p>Sage VE</p>
-<p>Jug Head V0</p>
-<p>Huckleberry Thin V1</p>
-<p>The Gnome V1</p>
-<p>One Way Out V0</p>
+<a href="https://www.youtube.com/shorts/gXIHU618aS4">
+<p>Razors Edge V0</p></a>
+<a href="https://www.youtube.com/shorts/CQaUcoDwH2s">
+<p>Simple Solution V1</p></a>
+<a href="https://www.youtube.com/shorts/NYKKd061CNE">
+<p>Top Hat V0</p></a>
+<a href="https://www.youtube.com/shorts/ljundrpsHt8">
+<p>Book of Fun V0</p></a>
+<a href="https://www.youtube.com/shorts/UvBOuIbq5m4">
+<p>Leftovers V0</p></a>
+<a href="https://www.youtube.com/shorts/9hr-9dSWN3s">
+<p>Desperation Alley V1</p></a>
+<a href="https://www.youtube.com/shorts/Si-I5Xn5ASo">
+<p>Trick Or Treat V3</p></a>
+<a href="https://www.youtube.com/shorts/YgiFibQwTPU">
+<p>The Flake of Destiny V5</p></a>
+<a href="https://www.youtube.com/shorts/CDY5FlIEoE8">
+<p>No Flakes Given V2</p></a>
+<a href="https://www.youtube.com/shorts/jyBuelKrEB4">
+<p>Frosted Flakes V0</p></a>
+<a href="https://www.youtube.com/shorts/T6s3gyh4M_w">
+<p>Outer Limits V0</p></a>
+<a href="https://www.youtube.com/shorts/Ycxs_5h6dU8">
+<p>No Limits V0</p></a>
+<a href="https://www.youtube.com/shorts/cMzDaR-AcP0">
+<p>Limited Choss V0</p></a>
+<a href="https://www.youtube.com/shorts/0zKphJnQyvA">
+<p>Sunday School V0</p></a>
+<a href="https://www.youtube.com/shorts/gnfDSfzgyl8">
+<p>Arrowhead V1</p></a>
+<a href="https://www.youtube.com/shorts/UGk0JvWdjiI">
+<p>Slick Trip V0</p></a>
+<a href="https://www.youtube.com/shorts/ZZ6Pn3bXAnw">
+<p>Projected V3</p></a>
+<a href="https://www.youtube.com/shorts/vdOISdcyHug">
+<p>Two Scoops V3</p></a>
+<a href="https://www.youtube.com/shorts/vumSh9xB_44">
+<p>Wheat Thin V3</p></a>
+<a href="https://www.youtube.com/shorts/z-lC4B76Plk">
+<p>Sage VE</p></a>
+<a href="https://www.youtube.com/shorts/DvXxXo-PBek">
+<p>Jug Head V0</p></a>
+<a href="https://www.youtube.com/shorts/k71almGSSUc">
+<p>Huckleberry Thin V1</p></a>
+<a href="https://www.youtube.com/shorts/YxhWymg54tQ">
+<p>The Gnome V1</p></a>
+<a href="https://www.youtube.com/shorts/kjBfyVIr2to">
+<p>One Way Out V0</p></a>
 
 
 
@@ -156,6 +180,7 @@
 </center>
 
  </html>
+
 
 
 
