Enhance Pima Punisher page with new climbs
Updated the Pima Punisher HTML page with additional climbs and links for January 2022. Improved formatting and added new entries for climbing routes.

--- a/html/2026goals/pimapunisher.html
+++ b/html/2026goals/pimapunisher.html
@@ -170,16 +170,27 @@
 <p>The Gnome V1</p></a>
 <a href="https://www.youtube.com/shorts/kjBfyVIr2to">
 <p>One Way Out V0</p></a>
+<br>
 
-
-
-
-
+<h2>1/22</h2>
+<p>Hidden Splendor V0</p>
+<p>Snap Crackle Pop V1</p>
+<p>Slip N' Slide V2</p>
+<p>Out of Africa V4</p>
+<p>Easy Way Out V2</p>
+<p>Bad Llama V2</p>
+<p>Camel Toes V0</p>
+<p>Inside Out V2</p>
+<p>Contraband V2</p>
+<p>Dick Leakage V2</p>
+<p>Hairy Cleavage V7</p>
+<br>
 
 	
 </center>
 
  </html>
+
 
 
 
