Update V-Point Challenge details and totals

--- a/html/2026goals/2026vpoint.html
+++ b/html/2026goals/2026vpoint.html
@@ -107,11 +107,24 @@
 <p>Keymaster into Skeleton Key = Skeletor V5</p>
 <br>
 
+<h2>Pima Canyon (1/25): 17+7*2=31</h2>
+<p>Snap Crackle Pop V1</p>
+<p>Slip N' Slide V2</p>
+<p>Out of Africa V4</p>
+<p>Easy Way Out V2</p>
+<p>Bad Llama V2</p>
+<p>Inside Out V2</p>
+<p>Contraband V2</p>
+<p>Dick Leakage V2</p>
+<p>Hairy Cleavage V7 (FLASH=14)</p>
+<br>
 
-<h2>Total: 158</h2>
+
+<h2>Total: 189</h2>
 
 </center>
 </html>
+
 
 
 
