Update status of various routes in punishertracker.html

--- a/html/2026goals/punishertracker.html
+++ b/html/2026goals/punishertracker.html
@@ -29,14 +29,14 @@
 <s>	Sunday School	V0	(F) 1/22/26 </s><br>
 <s>	Top Hat	V0	(F) 1/22/26 </s><br>
 <p>	Shit, Shower, and Shave	V0	</p>
-<p>	Camel Toes	V0	</p>
+<s>	Camel Toes	V0	(F) 1/25/26</s><br>
 <s>	Suspended Animation	V0	(F) 1/20/26</s><br>
 <s>	Proud Line	V0	(F) 1/15/26</s><br>
 <p>	Horney Toad	V0	</p>
 <s>	Varicose Vein	V0	(F) 1/15/26</s><br>
 <s>	Lost	V0	(F) 1/20/26</s><br>
 <s>	Walking Tall	V0	(F) 1/15/26</s><br>
-<p>	Hidden Splendor	V0	</p>
+<s>	Hidden Splendor	V0	(F) 1/25/26</s><br>
 <p>	The Librarian	V0	</p>
 <p>	Cowgirl Sex	V0	</p>
 <p>	Cowboy Sex	V0	</p>
@@ -75,7 +75,7 @@
 <s>	Pinch Hitter	V1	(F) 1/15/26</s><br>
 <s>	The Gnome	V1	(F) 1/22/26 </s><br>
 <s>	Desperation Alley	V1	(F) 1/22/26 </s><br>
-<p>	Snap Crackle Pop	V1	</p>
+<s>	Snap Crackle Pop	V1	(F) 1/25/26</s><br>
 <s>	Huckleberry Thin	V1	(F) 1/22/26 </s><br>
 <p>	3 D's Are Better Than 2	V1	</p>
 <s> Dilbert Unleashed	V1	(BROKEN MAY GO HIGHER GRADE)</s><br>
@@ -90,25 +90,25 @@
 <s>	Silly Little Dirty	V2	(F) 1/9/26 </s><br>
 <s>	The Tongue	V2	(F) 1/9/26 </s><br>
 <s>	Jiffy Pop	V2	(F) 1/20/26</s><br>
-<p>	Topsy Turvy	V2	</p>
+<s>	Topsy Turvy	V2	(NOT A BOULDER PROBLEM)</s><br>
 <p>	Lost And Found	V2	</p>
 <p>	Frosted Flakes	V2	</p>
 <s>	Palette Knife	V2	(F) 1/20/26</s><br>
-<p>	Slip N' Slide	V2	</p>
+<s>	Slip N' Slide	V2	(F) 1/25/26</s><br>
 <p>	The Onion	V2	</p>
-<p>	Easy Way Out	V2	</p>
+<s>	Easy Way Out	V2	(2S) 1/25/26</s><br>
 <s>	Snake Pit	V2	(F) 1/20/26</s><br>
 <s> Liposuction V2 (F) 1/9/26 </s><br>
 <p>	Tatoo Tiger	V2	</p>
 <p>	Rangler	V2	</p>
-<p>	Inside Out	V2	</p>
-<p>	Contraband	V2	</p>
+<s>	Inside Out	V2	(F) 1/25/26</s><br>
+<s>	Contraband	V2	(F) 1/25/26</s><br>
 <p>	Close Shave	V2	</p>
 <p>	Mother Neature	V2	</p>
 <s>	No Flakes Given	V2	(F) 1/22/26 </s><br>
-<p>	Dick Leakage	V2	</p>
+<s>	Dick Leakage	V2	(F) 1/25/26</s><br>
 <s>	Hand Jive	V2	(2S) 1/9/26 </s><br>
-<p>	Bad Llama	V2	</p>
+<s>	Bad Llama	V2	(F) 1/25/26</s><br>
 <s>	Wheat Thin	V3	(F) 1/22/26 </s><br>
 <p>	Mindfullness	V3	</p>
 <p>	Predator	V3	</p>
@@ -126,7 +126,7 @@
 <p> Superfly V3 </p>
 <p>	Throw Some D's	V3	</p>
 <p>	Seeing Red	V3	</p>
-<p>	Clamor and Filth of the Cultural Apparatus	V3	</p>
+<s>	Clamor and Filth of the Cultural Apparatus	V3	(NOT A BOULDER PROBLEM)</s><br>
 <p>	KG SOLOMAN 5000	V3	</p>
 <p>	Crackhead	V3	</p>
 <s> Key To The Kingdom V3 (F) 1/9/26</s><br>
@@ -142,7 +142,7 @@
 <p>	Tsunami Arete	V4	</p>
 <s>	Main Attraction	V4	(L) 1/15/26</s><br>
 <p>	False Samurai	V4	</p>
-<p>	Out of Africa	V4	</p>
+<s>	Out of Africa	V4	(3S) 1/25/26</s><br>
 <p>	Air Leeches	V4	</p>
 <p>	Cocaine Corner	V4	</p>
 <p>	MVFB	V4	</p>
@@ -180,14 +180,14 @@
 <p>	Caveman	V6	</p>
 <p>	Elephant Tree	V6	</p>
 <p>	Locomotion	V6	</p>
-<p>	Desperado	V6	</p>
+<s>	Desperado	V6	(NOT A BOULDER PROBLEM)</s><br>
 <p>	Elephant Forest	V6	</p>
 <p>	Sideshow Bob	V6	</p>
 <p>	Wheaties	V6	</p>
 <p>	Gritstone	V6	</p>
 <p>	Wawa	V6	</p>
 <p>	Rip Curl	V6-7	</p>
-<p>	Hairy Cleavage	V7	</p>
+<s>	Hairy Cleavage	V7	(F) 1/25/26</s><br>
 <p>	Coyotes Choice	V7	</p>
 <p>	Flake It Til You Make It	V7	</p>
 <p>	Fisty Fiesta	V7	</p>
@@ -198,6 +198,7 @@
 <p>	Black Star	V9-10	</p>
 <p>Believe The Hype V10</p>
 <p>	Scarface	V11	</p>
+<p>	Sliceface	V11	</p>
 <p>	The Hustle	V12	</p>
 <br>
 <h2>Routes</h2>
