--- a/html/2026goals/pimapunisher.html
+++ b/html/2026goals/pimapunisher.html
@@ -173,23 +173,35 @@
 <br>
 
 <h2>1/22</h2>
-<p>Hidden Splendor V0</p>
-<p>Snap Crackle Pop V1</p>
-<p>Slip N' Slide V2</p>
-<p>Out of Africa V4</p>
-<p>Easy Way Out V2</p>
-<p>Bad Llama V2</p>
-<p>Camel Toes V0</p>
-<p>Inside Out V2</p>
-<p>Contraband V2</p>
-<p>Dick Leakage V2</p>
-<p>Hairy Cleavage V7</p>
+<a href="https://www.youtube.com/shorts/vT_cemPEDjs">
+<p>Hidden Splendor V0</p></a>
+<a href="https://www.youtube.com/shorts/G0Vwrp_qyd4">
+<p>Snap Crackle Pop V1</p></a>
+<a href="https://www.youtube.com/shorts/EvmnQFkPhuQ">
+<p>Slip N' Slide V2</p></a>
+<a href="https://www.youtube.com/shorts/YwIcVJj8oqA">
+<p>Out of Africa V4</p></a>
+<a href="https://www.youtube.com/shorts/d6NQfhSKIno">
+<p>Easy Way Out V2</p></a>
+<a href="https://www.youtube.com/shorts/RGi0PWAXmEU">
+<p>Bad Llama V2</p></a>
+<a href="https://www.youtube.com/shorts/4z8pQHdDz4s">
+<p>Camel Toes V0</p></a>
+<a href="https://www.youtube.com/shorts/4J4mbCDwKc8">
+<p>Inside Out V2</p></a>
+<a href="https://www.youtube.com/shorts/ztvWw1NZOZ0">
+<p>Contraband V2</p></a>
+<a href="https://www.youtube.com/shorts/mtqkBETUUu4">
+<p>Dick Leakage V2</p></a>
+<a href="https://www.youtube.com/shorts/D2VZ1euzqjo">
+<p>Hairy Cleavage V7</p></a>
 <br>
 
 	
 </center>
 
  </html>
+
 
 
 
