--- a/html/thinking.html
+++ b/html/thinking.html
@@ -36,6 +36,14 @@
 <p>sign spinners are the purest most ultimate form of advertising. Using your own body and its movement to advertise something is pretty fucking punk rock. Go tip your nearest sign spinner because they are busting to no real audience.</p>
 <br>
 
+<h2>training outside</h2>
+<br>
+<h2>tom blake</h2>
+<br>
+<h2>primal sends</h2>
+<br>
+
+
 
 <br>
 <a href="/html/lifeidioms.html">
