Revise Pima Punisher page with new climbs and styles
Updated the Pima Punisher HTML page with new climbing entries and improved formatting.

--- a/html/2026goals/pimapunisher.html
+++ b/html/2026goals/pimapunisher.html
@@ -172,7 +172,7 @@
 <p>One Way Out V0</p></a>
 <br>
 
-<h2>1/22</h2>
+<h2>1/25</h2>
 <a href="https://www.youtube.com/shorts/vT_cemPEDjs">
 <p>Hidden Splendor V0</p></a>
 <a href="https://www.youtube.com/shorts/G0Vwrp_qyd4">
@@ -197,10 +197,39 @@
 <p>Hairy Cleavage V7</p></a>
 <br>
 
+<h2>1/27</h2>
+<p>Grease Monkey V3</p>
+<p>Locked and Loaded V5</p>
+<p>Shards Of Narsil V5</p>
+<p>South America V3</p>
+<p>Lost And Found V2</p>
+<p>Pop Rocks V4</p>
+<p>Sidewinder V4</p>
+<p>Gritstone V6</p>
+<p>Side Salad V3</p>
+<p>Hallow Man V4</p>
+<br>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 	
 </center>
 
  </html>
+
 
 
 
