--- a/html/2026goals/2026vpoint.html
+++ b/html/2026goals/2026vpoint.html
@@ -119,11 +119,24 @@
 <p>Hairy Cleavage V7 (FLASH=14)</p>
 <br>
 
+<h2>Pima Canyon (1/27): 39</h2>
+<p>Grease Monkey V3</p>
+<p>Locked and Loaded V5</p>
+<p>Shards Of Narsil V5</p>
+<p>South America V3</p>
+<p>Lost And Found V2</p>
+<p>Pop Rocks V4</p>
+<p>Sidewinder V4</p>
+<p>Gritstone V6</p>
+<p>Side Salad V3</p>
+<p>Hallow Man V4</p>
+<br>
 
-<h2>Total: 189</h2>
+<h2>Total: 228</h2>
 
 </center>
 </html>
+
 
 
 
