Update climbing route statuses and dates

--- a/html/2026goals/punishertracker.html
+++ b/html/2026goals/punishertracker.html
@@ -91,7 +91,7 @@
 <s>	The Tongue	V2	(F) 1/9/26 </s><br>
 <s>	Jiffy Pop	V2	(F) 1/20/26</s><br>
 <s>	Topsy Turvy	V2	(NOT A BOULDER PROBLEM)</s><br>
-<p>	Lost And Found	V2	</p>
+<s>	Lost And Found	V2	(F) 1/27/26</s><br>
 <p>	Frosted Flakes	V2	</p>
 <s>	Palette Knife	V2	(F) 1/20/26</s><br>
 <s>	Slip N' Slide	V2	(F) 1/25/26</s><br>
@@ -118,9 +118,9 @@
 <p>	White Men Don't Jump (Jump Start Right)	V3	</p>
 <s>	Two Scoops	V3	(F) 1/22/26 </s><br>
 <s>	Projected	V3	(F) 1/22/26 </s><br>
-<p>	Side Salad	V3	</p>
+<s>	Side Salad	V3	(F) 1/27/26</s><br>
 <s>	Trick Or Treat	V3	(2S) 1/22/26 </s><br>
-<p>	South America V3	</p>
+<s>	South America V3	(F) 1/27/26</s><br>
 <s> Washed Out V3 1/20/26</s><br>
 <s> Iguana Head V3 (F) 1/9/26 </s><br>
 <p> Superfly V3 </p>
@@ -131,7 +131,7 @@
 <p>	Crackhead	V3	</p>
 <s> Key To The Kingdom V3 (F) 1/9/26</s><br>
 <p>	First Time	V3	</p>
-<p>	Grease Monkey	V3	</p>
+<s>	Grease Monkey	V3	(2S) 1/27/26</s><br>
 <p>	Slo-Mo	V4	</p>
 <p>	Number 1 OW	V4	</p>
 <s>	Crown Jewel	V4	(L) 1/9/26 </s><br>
@@ -146,18 +146,18 @@
 <p>	Air Leeches	V4	</p>
 <p>	Cocaine Corner	V4	</p>
 <p>	MVFB	V4	</p>
-<p>	Hallow Man	V4	</p>
+<s>	Hallow Man	V4	(F) 1/27/26</s><br>
 <s>	Pima Traverse	V4	(F) 1/9/26 </s><br>
 <p>	Mr. Schnebly	V4	</p>
 <p>	The Lecture	V4	</p>
 <p>	Red Ruby	V4	</p>
-<p>	Pop Rocks	V4	</p>
+<s>	Pop Rocks	V4	(4S) 1/27/26</s><br>
 <p>	Muay Thai Friday	V4	</p>
 <s>	Crown Traverse	V4	(F) 1/15/26</s><br>
 <s>	MV Problem	V4	(F) 1/15/26</s><br>
-<p>	Sidewinder	V4	</p>
+<s>	Sidewinder	V4	(F) 1/27/26</s><br>
 <p>	Deviated Septum	V4-5	</p>
-<p>	Locked and Loaded	V5	</p>
+<s>	Locked and Loaded	V5	(F) 1/27/26</s><br>
 <p>	Rocky Mountain Daydream	V5	</p>
 <p>	Wheat Thin-er (Sit Start)	V5	</p>
 <s>	Double Fisted	V5	(4S) 1/20/26</s><br>
@@ -166,7 +166,7 @@
 <p>	Tenille	V5	</p>
 <p>	Table Topper	V5	</p>
 <p>	Seven Samurai	V5	</p>
-<p>	Shards Of Narsil	V5	</p>
+<s>	Shards Of Narsil	V5	(F) 1/27/26</s><br>
 <p>	Seven Samurai Direct	V5	</p>
 <p>	Nutshell	V5	</p>
 <p>	Diamond in the Rough	V5	</p>
@@ -184,7 +184,7 @@
 <p>	Elephant Forest	V6	</p>
 <p>	Sideshow Bob	V6	</p>
 <p>	Wheaties	V6	</p>
-<p>	Gritstone	V6	</p>
+<s>	Gritstone	V6	(F) 1/27/26</s><br>
 <p>	Wawa	V6	</p>
 <p>	Rip Curl	V6-7	</p>
 <s>	Hairy Cleavage	V7	(F) 1/25/26</s><br>
