--- a/html/2026goals/pimapunisher.html
+++ b/html/2026goals/pimapunisher.html
@@ -198,16 +198,26 @@
 <br>
 
 <h2>1/27</h2>
-<p>Grease Monkey V3</p>
-<p>Locked and Loaded V5</p>
-<p>Shards Of Narsil V5</p>
-<p>South America V3</p>
-<p>Lost And Found V2</p>
-<p>Pop Rocks V4</p>
-<p>Sidewinder V4</p>
-<p>Gritstone V6</p>
-<p>Side Salad V3</p>
-<p>Hallow Man V4</p>
+<a href="https://www.youtube.com/shorts/66-dZ2Ja__U">
+<p>Grease Monkey V3</p></a>
+<a href="https://www.youtube.com/shorts/-ffewryYMBQ">
+<p>Locked and Loaded V5</p></a>
+<a href="https://www.youtube.com/shorts/jhs7mbZCgdI">
+<p>Shards Of Narsil V5</p></a>
+<a href="https://www.youtube.com/shorts/DIS6j4pt-Ks">
+<p>South America V3</p></a>
+<a href="https://www.youtube.com/shorts/4FpM2L3evIA">
+<p>Lost And Found V2</p></a>
+<a href="https://www.youtube.com/shorts/9nYFURT7NDI">
+<p>Pop Rocks V4</p></a>
+<a href="https://www.youtube.com/shorts/QloC884J1ws">
+<p>Sidewinder V4</p></a>
+<a href="https://www.youtube.com/shorts/8G9qAdAKBU4">
+<p>Gritstone V6</p></a>
+<a href="https://www.youtube.com/shorts/Pi7cV0Hzvv8">
+<p>Side Salad V3</p></a>
+<a href="https://www.youtube.com/shorts/7VLbAA0fWP4">
+<p>Hallow Man V4</p></a>
 <br>
 
 
@@ -229,6 +239,7 @@
 </center>
 
  </html>
+
 
 
 
