Update HTML for 2026 V-Point Challenge

--- a/html/2026goals/2026vpoint.html
+++ b/html/2026goals/2026vpoint.html
@@ -132,10 +132,16 @@
 <p>Hallow Man V4</p>
 <br>
 
-<h2>Total: 228</h2>
+<h2>Superstitions (1/29): 11</h2>
+<p>Public Enemy V10</p>
+<p>Azawad V1</p>
+<br>
+
+<h2>Total: 239</h2>
 
 </center>
 </html>
+
 
 
 
