Add new fortress entries for 1/29/26

--- a/html/azcrags/supes.html
+++ b/html/azcrags/supes.html
@@ -47,6 +47,12 @@
 <p>Keymaster into Skeleton Key = Skeletor V5 (S)</p>
 <br>
 
+<h2>Fortress 1/29/26</h2>
+<p>Keyhole V3 (L)</p>
+<p>Public Enemy V10 (S)</p>
+<p>Azawad V1 (S)</p>
+<br>
+
  </center>
  </html>
 
