--- a/html/2026goals/2026vpoint.html
+++ b/html/2026goals/2026vpoint.html
@@ -137,7 +137,15 @@
 <p>Azawad V1</p>
 <br>
 
-<h2>Total: 239</h2>
+<h2>Priest Draw (2/1): 18</h2>
+<p>Twister Direct V2</p>
+<p>Big Ed's Flying Saucer V4</p>
+<p>Big Ed's Flying Saucer Low V5</p>
+<p>Unkonwn V3</p>
+<p>Ultramega V4</p>
+<br>
+
+<h2>Total: 257</h2>
 
 </center>
 </html>
