Update pdraw.html with climbing routes
Added climbing routes and details to the Priest Draw page.

--- a/html/azcrags/pdraw.html
+++ b/html/azcrags/pdraw.html
@@ -21,8 +21,20 @@
 </a>
 <p>Map from OG PDF guide</p>
 
+<h2>2/1/26: Island,Coffin Roof,Floorpie Roof,Bat Roof</h2>
+<p>The Brain (L)</p>
+<p>Fucktard V5 (L)</p>
+<p>Baby Coffin (L)</p>
+<p>Twister Direct V2 (F)</p>
+<p>Big Ed's Flying Saucer V4 (F)</p>
+<p>Big Ed's Flying Saucer Low V5 (S)</p>
+<p>Unkonwn V3 (F)</p>
+<p>Ultramega V4 (S)</p>
+<br>
+
  </center>
  </html>
+
 
 
 
