--- a/html/azcrags/supes.html
+++ b/html/azcrags/supes.html
@@ -49,7 +49,8 @@
 
 <h2>Fortress 1/29/26</h2>
 <p>Keyhole V3 (L)</p>
-<p>Public Enemy V10 (S)</p>
+<a href="https://m.youtube.com/watch?v=4-Tw3jniW_Q">
+<p>Public Enemy V10 (S)</p></a>
 <p>Azawad V1 (S)</p>
 <br>
 
