--- a/html/azcrags/supes.html
+++ b/html/azcrags/supes.html
@@ -39,6 +39,7 @@
 <p>Captain Stabbums V5 (S)</p>
 
 <h2>Fortress 1/18/26</h2>
+<p>Wonderboy V4 (L)</p>
 <a href="https://www.youtube.com/watch?v=vWsxkVy5nhw">
 <p>General Dissaray V10 (S)</p></a>
 <br>
