Add new section for Fortress with details

--- a/html/azcrags/supes.html
+++ b/html/azcrags/supes.html
@@ -57,6 +57,15 @@
 <p>Azawad V1 (S)</p>
 <br>
 
+<h2>Fortress 2/6/26</h2>
+<p>Keyhole V3 (P)</p>
+<p>Skeletor V5 (L)</p>
+<p>The Crow V3 (F)</p>
+<p>Wonderboy V4 (L)</p>
+<p>Superboy V5 (S)</p>
+<p>Whiskey Tango V6 (P)</p>
+<br>
+
  </center>
  </html>
 
