Update climbing routes and total points
Added new climbing routes and updated totals.

--- a/html/2026goals/2026vpoint.html
+++ b/html/2026goals/2026vpoint.html
@@ -145,10 +145,16 @@
 <p>Ultramega V4</p>
 <br>
 
-<h2>Total: 257</h2>
+<h2>Superstitions (2/6): 8</h2>
+<p>The Crow V3</p>
+<p>Superboy V5</p>
+<br>
+
+<h2>Total: 265</h2>
 
 </center>
 </html>
+
 
 
 
