--- a/html/2026goals/2026vpoint.html
+++ b/html/2026goals/2026vpoint.html
@@ -150,6 +150,11 @@
 <p>Superboy V5</p>
 <br>
 
+<h2>Groom Creek (2/8): 6</h2>
+<p>Rustys Nemisis V1</p>
+<p>Monster Mantle (Stand) V5</p>
+<br>
+
 <h2>Total: 265</h2>
 
 </center>
