Refactor HTML structure and update content

--- a/html/2026goals/pimapunisher.html
+++ b/html/2026goals/pimapunisher.html
@@ -220,15 +220,21 @@
 <p>Hallow Man V4</p></a>
 <br>
 
-
-
-
-
-
-
-
-
-
+<h2>2/10</h2>
+<p>Cant Send Me to Rehab V2</p>
+<p>Flippin the Bitch V1</p>
+<p>Throw Some D's V3</p>
+<p>Nasal Cavity (Jump Start) V3</p>
+<p>White Men Don't Jump (Jump Start Right) V3</p>
+<p>Deviated Septum V4-5</p>
+<p>MVFB V4</p>
+<p>Sharks Tooth VE</p>
+<p>Cowboy Sex V0</p>
+<p>Nut Cracker V0</p>
+<p>Nut Cracker (marty) V0</p>
+<p>Nutshell V5</p>
+<p>Cocaine Corner V4</p>
+<br>
 
 
 
@@ -239,6 +245,7 @@
 </center>
 
  </html>
+
 
 
 
