--- a/html/2026goals/2026vpoint.html
+++ b/html/2026goals/2026vpoint.html
@@ -155,10 +155,23 @@
 <p>Monster Mantle (Stand) V5</p>
 <br>
 
-<h2>Total: 271</h2>
+<h2>Pima Canyon (2/10): 30</h2>
+<p>Cant Send Me to Rehab V2</p>
+<p>Flippin the Bitch V1</p>
+<p>Throw Some D's V3</p>
+<p>Nasal Cavity (Jump Start) V3</p>
+<p>White Men Don't Jump (Jump Start Right) V3</p>
+<p>Deviated Septum V5</p>
+<p>MVFB V4</p>
+<p>Nutshell V5</p>
+<p>Cocaine Corner V4</p>
+<br>
+
+<h2>Total: 301</h2>
 
 </center>
 </html>
+
 
 
 
