Update punishertracker.html with strike-throughs

--- a/html/2026goals/punishertracker.html
+++ b/html/2026goals/punishertracker.html
@@ -18,7 +18,7 @@
 <p>"(F:Flash)   (#s:Burns Before Send)   (Date Sent)"</p>
 
 <h2>Problems</h2>
-<p>	Sharks Tooth	VE	</p>
+<s>	Sharks Tooth	VE	(F) 2/10/26 </s><br>
 <s>	Robbins Crack	VE	(F) 1/15/26</s><br>
 <s>	Sage	VE	(F) 1/22/26 </s><br>
 <s>	Blockstar	V0	(F) 1/15/26</s><br>
@@ -39,7 +39,7 @@
 <s>	Hidden Splendor	V0	(F) 1/25/26</s><br>
 <p>	The Librarian	V0	</p>
 <p>	Cowgirl Sex	V0	</p>
-<p>	Cowboy Sex	V0	</p>
+<s>	Cowboy Sex	V0	(F) 2/10/26 </s><br>
 <s>	Jug Head	V0	(F) 1/22/26 </s><br>
 <p>	Finger Food	V0	</p>
 <s>	Leftovers	V0	(F) 1/22/26 </s><br>
@@ -53,12 +53,12 @@
 <s>	Surrealism on Acid	V0	(F) 1/20/26</s><br>
 <p>	Nothing to it	V0	</p>
 <s>	Serpents Throne	V0	(BROKEN)</s><br>
-<p>	Nut Cracker	V0	</p>
+<s>	Nut Cracker	V0 "MP"	(F) 2/10/26 </s><br>
+<s>	Nut Cracker	V0 "MK"	(F) 2/10/26 </s><br>
 <s>	Frosted Flakes	V0	(F) 1/22/26 </s><br>
 <s>	Razors Edge	V0	(F) 1/22/26 </s><br>
 <s>	Outer Limits	V0	(F) 1/22/26 </s><br>
 <s>	Slick Trip	V0	(F) 1/22/26 </s><br>
-<p>	Unnamed Crack Problem	V0	</p>
 <p>	Mike’s Rainbow Sandals	V0	</p>
 <s> Tweedle Dum	V0	(F) 1/9/26 </s><br>
 <s> Dilbert	V0	(BROKEN MAY GO HIGHER GRADE)</s><br>
@@ -71,7 +71,7 @@
 <s>	Tweedle Dee V1 (F) 1/9/26 </s><br>
 <p>	Schnebly Does Crack	V1	</p>
 <s>	Simple Solution	V1	(F) 1/22/26 </s><br>
-<p>	Flippin the Bitch	V1	</p>
+<s>	Flippin the Bitch	V1	(F) 2/10/26 </s><br>
 <s>	Pinch Hitter	V1	(F) 1/15/26</s><br>
 <s>	The Gnome	V1	(F) 1/22/26 </s><br>
 <s>	Desperation Alley	V1	(F) 1/22/26 </s><br>
@@ -80,7 +80,7 @@
 <p>	3 D's Are Better Than 2	V1	</p>
 <s> Dilbert Unleashed	V1	(BROKEN MAY GO HIGHER GRADE)</s><br>
 <s>	Arrowhead	V1	(F) 1/22/26 </s><br>
-<p>	Can't Send Me to Rehab	V1-2	</p>
+<s>	Can't Send Me to Rehab	V2	(F) 2/10/26 </s><br>
 <s>	Guardian Of The Canvas	V2	(F) 1/20/26</s><br>
 <s>	Tokugawa	V2	(F) 1/20/26</s><br>
 <s>	Low Rider	V2	(F) 1/15/26</s><br>
@@ -100,7 +100,7 @@
 <s>	Snake Pit	V2	(F) 1/20/26</s><br>
 <s> Liposuction V2 (F) 1/9/26 </s><br>
 <p>	Tatoo Tiger	V2	</p>
-<p>	Rangler	V2	</p>
+<s>	Rangler	V2	(NOT A BOULDER PROBLEM)</s><br>
 <s>	Inside Out	V2	(F) 1/25/26</s><br>
 <s>	Contraband	V2	(F) 1/25/26</s><br>
 <p>	Close Shave	V2	</p>
@@ -110,12 +110,12 @@
 <s>	Hand Jive	V2	(2S) 1/9/26 </s><br>
 <s>	Bad Llama	V2	(F) 1/25/26</s><br>
 <s>	Wheat Thin	V3	(F) 1/22/26 </s><br>
-<p>	Mindfullness	V3	</p>
+<s>	Mindfullness	V3	(NOT A BOULDER PROBLEM)</s><br>
 <p>	Predator	V3	</p>
-<p>	Nasal Cavity (Jump Start)	V3	</p>
+<s>	Nasal Cavity (Jump Start)	V3	(F) 2/10/26 </s><br>
 <s>	Crown of Thorns	V3	(F) 1/9/26 </s><br>
 <s>	Puppet Master	V3	1/20/26</s><br>
-<p>	White Men Don't Jump (Jump Start Right)	V3	</p>
+<s>	White Men Don't Jump (Jump Start Right)	V3	(F) 2/10/26 </s><br>
 <s>	Two Scoops	V3	(F) 1/22/26 </s><br>
 <s>	Projected	V3	(F) 1/22/26 </s><br>
 <s>	Side Salad	V3	(F) 1/27/26</s><br>
@@ -124,16 +124,16 @@
 <s> Washed Out V3 1/20/26</s><br>
 <s> Iguana Head V3 (F) 1/9/26 </s><br>
 <p> Superfly V3 </p>
-<p>	Throw Some D's	V3	</p>
+<s>	Throw Some D's	V3	(F) 2/10/26 </s><br>
 <p>	Seeing Red	V3	</p>
 <s>	Clamor and Filth of the Cultural Apparatus	V3	(NOT A BOULDER PROBLEM)</s><br>
 <p>	KG SOLOMAN 5000	V3	</p>
-<p>	Crackhead	V3	</p>
+<s>	Crackhead	V3	(NOT A BOULDER PROBLEM)</s><br>
 <s> Key To The Kingdom V3 (F) 1/9/26</s><br>
 <p>	First Time	V3	</p>
 <s>	Grease Monkey	V3	(2S) 1/27/26</s><br>
 <p>	Slo-Mo	V4	</p>
-<p>	Number 1 OW	V4	</p>
+<s>	Number 1 OW	V4	(NOT A BOULDER PROBLEM)</s><br>
 <s>	Crown Jewel	V4	(L) 1/9/26 </s><br>
 <p>	Versatility	V4	</p>
 <s>	Stairway to Heaven	V4	(F) 1/9/26 </s><br>
@@ -144,8 +144,8 @@
 <p>	False Samurai	V4	</p>
 <s>	Out of Africa	V4	(3S) 1/25/26</s><br>
 <p>	Air Leeches	V4	</p>
-<p>	Cocaine Corner	V4	</p>
-<p>	MVFB	V4	</p>
+<s>	Cocaine Corner	V4	(3S) 2/10/26 </s><br>
+<s>	MVFB	V4	(F) 2/10/26 </s><br>
 <s>	Hallow Man	V4	(F) 1/27/26</s><br>
 <s>	Pima Traverse	V4	(F) 1/9/26 </s><br>
 <p>	Mr. Schnebly	V4	</p>
@@ -156,7 +156,7 @@
 <s>	Crown Traverse	V4	(F) 1/15/26</s><br>
 <s>	MV Problem	V4	(F) 1/15/26</s><br>
 <s>	Sidewinder	V4	(F) 1/27/26</s><br>
-<p>	Deviated Septum	V4-5	</p>
+<s>	Deviated Septum	V5	(F) 2/10/26 </s><br>
 <s>	Locked and Loaded	V5	(F) 1/27/26</s><br>
 <p>	Rocky Mountain Daydream	V5	</p>
 <p>	Wheat Thin-er (Sit Start)	V5	</p>
@@ -168,9 +168,9 @@
 <p>	Seven Samurai	V5	</p>
 <s>	Shards Of Narsil	V5	(F) 1/27/26</s><br>
 <p>	Seven Samurai Direct	V5	</p>
-<p>	Nutshell	V5	</p>
+<s>	Nutshell	V5	(2S) 2/10/26 </s><br>
 <p>	Diamond in the Rough	V5	</p>
-<p>	Every Coyote	V5	</p>
+<s>	Every Coyote	V5	(BROKEN MAY GO HIGHER GRADE)</s><br>
 <s>	The Flake of Destiny	V5	(2S) 1/22/26 </s><br>
 <p>	Glove Knee	V5	</p>
 <p>	Clockwork Red	V5	</p>
