Revise climbing goals and update counts
Updated the climbing goals list and adjusted the total count of problems, routes, and projects.

--- a/html/2026goals/pimapunisher.html
+++ b/html/2026goals/pimapunisher.html
@@ -19,7 +19,7 @@
 <p>maybe not the hustle, but thatd be cool</p>
 
 <a href="/html/2026goals/punishertracker.html">
-	<h2>Complete List: 179 problems + 2 Routes + 5 Projects</h2>
+	<h2>Complete List: 175 problems + 2 Routes + 5 Projects</h2>
 </a>
 
 <h2>climbs by date</h2>
@@ -230,8 +230,8 @@
 <p>MVFB V4</p>
 <p>Sharks Tooth VE</p>
 <p>Cowboy Sex V0</p>
-<p>Nut Cracker V0</p>
-<p>Nut Cracker (marty) V0</p>
+<p>Nut Cracker "MP "V0</p>
+<p>Nut Cracker "MK" V0</p>
 <p>Nutshell V5</p>
 <p>Cocaine Corner V4</p>
 <br>
@@ -245,6 +245,7 @@
 </center>
 
  </html>
+
 
 
 
