--- a/html/2026goals/pimapunisher.html
+++ b/html/2026goals/pimapunisher.html
@@ -221,19 +221,32 @@
 <br>
 
 <h2>2/10</h2>
-<p>Cant Send Me to Rehab V2</p>
-<p>Flippin the Bitch V1</p>
-<p>Throw Some D's V3</p>
-<p>Nasal Cavity (Jump Start) V3</p>
-<p>White Men Don't Jump (Jump Start Right) V3</p>
-<p>Deviated Septum V5</p>
-<p>MVFB V4</p>
-<p>Sharks Tooth VE</p>
-<p>Cowboy Sex V0</p>
-<p>Nut Cracker "MP "V0</p>
-<p>Nut Cracker "MK" V0</p>
-<p>Nutshell V5</p>
-<p>Cocaine Corner V4</p>
+<a href="https://www.youtube.com/shorts/iCX63NTV-SM">
+<p>Cant Send Me to Rehab V2</p></a>
+<a href="https://www.youtube.com/shorts/s11G13tWKKY">
+<p>Flippin the Bitch V1</p></a>
+<a href="https://www.youtube.com/shorts/Y9N5TdhLZ1o">
+<p>Throw Some D's V3</p></a>
+<a href="https://www.youtube.com/shorts/pe90CefYJmM">
+<p>Nasal Cavity (Jump Start) V3</p></a>
+<a href="https://www.youtube.com/shorts/qxFwb0OsJKE">
+<p>White Men Don't Jump (Jump Start Right) V3</p></a>
+<a href="https://www.youtube.com/shorts/1brwmHBSE7Y">
+<p>Deviated Septum V5</p></a>
+<a href="https://www.youtube.com/shorts/a8KZHFkcan4">
+<p>MVFB V4</p></a>
+<a href="https://www.youtube.com/shorts/HJi6sio0A6E">
+<p>Sharks Tooth VE</p></a>
+<a href="https://www.youtube.com/shorts/w-elsUpp5Hs">
+<p>Cowboy Sex V0</p></a>
+<a href="https://www.youtube.com/shorts/XnquipggTxQ">
+<p>Nut Cracker "MP "V0</p></a>
+<a href="https://www.youtube.com/shorts/oEJQUOtYFQ0">
+<p>Nut Cracker "MK" V0</p></a>
+<a href="https://www.youtube.com/shorts/PX5y7PM9rL0">
+<p>Nutshell V5</p></a>
+<a href="https://www.youtube.com/shorts/yMHbHC67GrA">
+<p>Cocaine Corner V4</p></a>
 <br>
 
 
@@ -245,6 +258,7 @@
 </center>
 
  </html>
+
 
 
 
