Update status of 'Wrong Place, Wrong Time' entry

--- a/html/2026goals/punishertracker.html
+++ b/html/2026goals/punishertracker.html
@@ -49,7 +49,7 @@
 <p>	Spindrift	V0	</p>
 <s>	One Way Out	V0	(F) 1/22/26 </s><br>
 <p>	Honduran	V0	</p>
-<p>	Wrong Place, Wrong Time	V0	</p>
+<s>	Wrong Place, Wrong Time	V0	(NOT A BOULDER PROBLEM)</s><br>
 <s>	Surrealism on Acid	V0	(F) 1/20/26</s><br>
 <p>	Nothing to it	V0	</p>
 <s>	Serpents Throne	V0	(BROKEN)</s><br>
