Add new section for Fortress/Cemetery

--- a/html/azcrags/supes.html
+++ b/html/azcrags/supes.html
@@ -66,6 +66,17 @@
 <p>Whiskey Tango V6 (P)</p>
 <br>
 
+<h2>Fortress/Cemetery 2/16/26</h2>
+<p>Keyhole V3 (L)</p>
+<p>Whiskey Tango V6 (L)</p>
+<p>Gamechanger V8 (S)</p>
+<p>Paleface V5 (L)</p>
+<p>The Reaper V7 (S)</p>
+<p>Day Walker V4 (S)</p>
+<p>The Mullet V0 (L)</p>
+
+<br>
+
  </center>
  </html>
 
