Revise 2026 V-Point Challenge entries and totals
Updated the V-Point Challenge details and added new entries.

--- a/html/2026goals/2026vpoint.html
+++ b/html/2026goals/2026vpoint.html
@@ -167,10 +167,16 @@
 <p>Cocaine Corner V4</p>
 <br>
 
-<h2>Total: 301</h2>
+<h2>Superstitions (2/16): 19</h2>
+<p>Gamechanger V8 (S)</p>
+<p>The Reaper V7 (S)</p>
+<p>Day Walker V4 (S)</p>
+
+<h2>Total: 320</h2>
 
 </center>
 </html>
+
 
 
 
