Split 'Shit, Shower, and Shave' into separate lines

--- a/html/2026goals/punishertracker.html
+++ b/html/2026goals/punishertracker.html
@@ -28,7 +28,9 @@
 <s>	Book of Fun	V0	(F) 1/22/26 </s><br>
 <s>	Sunday School	V0	(F) 1/22/26 </s><br>
 <s>	Top Hat	V0	(F) 1/22/26 </s><br>
-<p>	Shit, Shower, and Shave	V0	</p>
+<p>	Shit	V0	</p>
+<p>	Shower	V0	</p>
+<p>	Shave	V0	</p>
 <s>	Camel Toes	V0	(F) 1/25/26</s><br>
 <s>	Suspended Animation	V0	(F) 1/20/26</s><br>
 <s>	Proud Line	V0	(F) 1/15/26</s><br>
