Refactor HTML structure and content for clarity

--- a/html/2026goals/pimapunisher.html
+++ b/html/2026goals/pimapunisher.html
@@ -249,6 +249,14 @@
 <p>Cocaine Corner V4</p></a>
 <br>
 
+<h2>2/17</h2>
+<p>Honduran V0</p>
+<p>Tatoo Tiger V2</p>
+<p>Shit V0</p>
+<p>Shower V0</p>
+<p>Shave V0</p>
+<br>
+
 
 
 
@@ -258,6 +266,7 @@
 </center>
 
  </html>
+
 
 
 
