--- a/html/2026goals/punishertracker.html
+++ b/html/2026goals/punishertracker.html
@@ -28,9 +28,9 @@
 <s>	Book of Fun	V0	(F) 1/22/26 </s><br>
 <s>	Sunday School	V0	(F) 1/22/26 </s><br>
 <s>	Top Hat	V0	(F) 1/22/26 </s><br>
-<p>	Shit	V0	</p>
-<p>	Shower	V0	</p>
-<p>	Shave	V0	</p>
+<s>	Shit	V0	(F) 2/17/26 </s><br>
+<s>	Shower	V0	(F) 2/17/26 </s><br>
+<s>	Shave	V0	(F) 2/17/26 </s><br>
 <s>	Camel Toes	V0	(F) 1/25/26</s><br>
 <s>	Suspended Animation	V0	(F) 1/20/26</s><br>
 <s>	Proud Line	V0	(F) 1/15/26</s><br>
@@ -40,7 +40,7 @@
 <s>	Walking Tall	V0	(F) 1/15/26</s><br>
 <s>	Hidden Splendor	V0	(F) 1/25/26</s><br>
 <p>	The Librarian	V0	</p>
-<p>	Cowgirl Sex	V0	</p>
+<s>	Cowgirl Sex	V0	(NOT A BOULDER PROBLEM)</s><br>
 <s>	Cowboy Sex	V0	(F) 2/10/26 </s><br>
 <s>	Jug Head	V0	(F) 1/22/26 </s><br>
 <p>	Finger Food	V0	</p>
@@ -48,12 +48,12 @@
 <s>	Tom Sawyer	V0	(BROKEN)</s><br>
 <p>	31 Flavors	V0	</p>
 <s>	No Limits	V0	(F) 1/22/26 </s><br>
-<p>	Spindrift	V0	</p>
+<p>	Spindrift	V0	(NOT A BOULDER PROBLEM)</s><br>
 <s>	One Way Out	V0	(F) 1/22/26 </s><br>
-<p>	Honduran	V0	</p>
+<p>	Honduran	V0	(F) 2/17/26 </s><br>
 <s>	Wrong Place, Wrong Time	V0	(NOT A BOULDER PROBLEM)</s><br>
 <s>	Surrealism on Acid	V0	(F) 1/20/26</s><br>
-<p>	Nothing to it	V0	</p>
+<s>	Nothing to it	V0 aka Number 1 OW	V4 	(NOT A BOULDER PROBLEM)</s><br>
 <s>	Serpents Throne	V0	(BROKEN)</s><br>
 <s>	Nut Cracker	V0 "MP"	(F) 2/10/26 </s><br>
 <s>	Nut Cracker	V0 "MK"	(F) 2/10/26 </s><br>
@@ -101,7 +101,7 @@
 <s>	Easy Way Out	V2	(2S) 1/25/26</s><br>
 <s>	Snake Pit	V2	(F) 1/20/26</s><br>
 <s> Liposuction V2 (F) 1/9/26 </s><br>
-<p>	Tatoo Tiger	V2	</p>
+<s>	Tatoo Tiger	V2	2/17/26 </s><br>
 <s>	Rangler	V2	(NOT A BOULDER PROBLEM)</s><br>
 <s>	Inside Out	V2	(F) 1/25/26</s><br>
 <s>	Contraband	V2	(F) 1/25/26</s><br>
@@ -135,7 +135,7 @@
 <p>	First Time	V3	</p>
 <s>	Grease Monkey	V3	(2S) 1/27/26</s><br>
 <p>	Slo-Mo	V4	</p>
-<s>	Number 1 OW	V4	(NOT A BOULDER PROBLEM)</s><br>
+<s>	Number 1 OW	V4	aka Nothing to it V0 (NOT A BOULDER PROBLEM)</s><br>
 <s>	Crown Jewel	V4	(L) 1/9/26 </s><br>
 <p>	Versatility	V4	</p>
 <s>	Stairway to Heaven	V4	(F) 1/9/26 </s><br>
