Fix formatting for Spindrift entry in punishertracker.html

--- a/html/2026goals/punishertracker.html
+++ b/html/2026goals/punishertracker.html
@@ -48,7 +48,7 @@
 <s>	Tom Sawyer	V0	(BROKEN)</s><br>
 <p>	31 Flavors	V0	</p>
 <s>	No Limits	V0	(F) 1/22/26 </s><br>
-<p>	Spindrift	V0	(NOT A BOULDER PROBLEM)</s><br>
+<s>	Spindrift	V0	(NOT A BOULDER PROBLEM)</s><br>
 <s>	One Way Out	V0	(F) 1/22/26 </s><br>
 <p>	Honduran	V0	(F) 2/17/26 </s><br>
 <s>	Wrong Place, Wrong Time	V0	(NOT A BOULDER PROBLEM)</s><br>
