Revise HTML for 1000 V-Point Challenge
Updated the HTML content for the 1000 V-Point Challenge, including rules and climbing lists. Adjusted total points and added new entries.

--- a/html/2026goals/2026vpoint.html
+++ b/html/2026goals/2026vpoint.html
@@ -171,11 +171,17 @@
 <p>Gamechanger V8 (S)</p>
 <p>The Reaper V7 (S)</p>
 <p>Day Walker V4 (S)</p>
+<br>
 
-<h2>Total: 320</h2>
+<h2>Pima Canyon (2/10): 2</h2>
+<p>Tatoo Tiger V2</p>
+<br>
+
+<h2>Total: 322</h2>
 
 </center>
 </html>
+
 
 
 
