--- a/html/2026goals/punishertracker.html
+++ b/html/2026goals/punishertracker.html
@@ -50,7 +50,7 @@
 <s>	No Limits	V0	(F) 1/22/26 </s><br>
 <s>	Spindrift	V0	(NOT A BOULDER PROBLEM)</s><br>
 <s>	One Way Out	V0	(F) 1/22/26 </s><br>
-<p>	Honduran	V0	(F) 2/17/26 </s><br>
+<s>	Honduran	V0	(F) 2/17/26 </s><br>
 <s>	Wrong Place, Wrong Time	V0	(NOT A BOULDER PROBLEM)</s><br>
 <s>	Surrealism on Acid	V0	(F) 1/20/26</s><br>
 <s>	Nothing to it	V0 aka Number 1 OW	V4 	(NOT A BOULDER PROBLEM)</s><br>
