--- a/html/2026goals/pimapunisher.html
+++ b/html/2026goals/pimapunisher.html
@@ -250,11 +250,16 @@
 <br>
 
 <h2>2/17</h2>
-<p>Honduran V0</p>
-<p>Tatoo Tiger V2</p>
-<p>Shit V0</p>
-<p>Shower V0</p>
-<p>Shave V0</p>
+<a href="https://www.youtube.com/shorts/B80MkL-EAl4">
+<p>Honduran V0</p></a>
+<a href="https://www.youtube.com/shorts/L0qAsoI-e90">
+<p>Tatoo Tiger V2</p></a>
+<a href="https://www.youtube.com/shorts/hgJ_fdex4Xs">
+<p>Shit V0</p></a>
+<a href="https://www.youtube.com/shorts/hgJ_fdex4Xs">
+<p>Shower V0</p></a>
+<a href="https://www.youtube.com/shorts/hgJ_fdex4Xs">
+<p>Shave V0</p></a>
 <br>
 
 
@@ -266,6 +271,7 @@
 </center>
 
  </html>
+
 
 
 
