--- a/html/2026goals/pimapunisher.html
+++ b/html/2026goals/pimapunisher.html
@@ -262,9 +262,13 @@
 <p>Shave V0</p></a>
 <br>
 
-
-
-
+<h2>2/18</h2>
+<p>Tsunami Arete V4</p>
+<p>Tsunami V4</p>
+<p>Wawa V6</p>
+<p>The Lecture V4</p>
+<p>Table Topper V5</p>
+<br>
 
 
 	
