--- a/html/2026goals/2026vpoint.html
+++ b/html/2026goals/2026vpoint.html
@@ -177,7 +177,15 @@
 <p>Tatoo Tiger V2</p>
 <br>
 
-<h2>Total: 322</h2>
+<h2>Pima Canyon (2/18): 27</h2>
+<p>Tsunami Arete V4</p>
+<p>Tsunami V4</p>
+<p>Wawa V6</p>
+<p>The Lecture V4</p>
+<p>Table Topper V5</p>
+<br>
+
+<h2>Total: 349</h2>
 
 </center>
 </html>
