--- a/html/2026goals/punishertracker.html
+++ b/html/2026goals/punishertracker.html
@@ -140,18 +140,18 @@
 <p>	Versatility	V4	</p>
 <s>	Stairway to Heaven	V4	(F) 1/9/26 </s><br>
 <s> Standing Ovation V4 (F) 1/9/26 </s><br>
-<p>	Tsunami	V4	</p>
-<p>	Tsunami Arete	V4	</p>
-<s>	Main Attraction	V4	(L) 1/15/26</s><br>
-<p>	False Samurai	V4	</p>
-<s>	Out of Africa	V4	(3S) 1/25/26</s><br>
-<p>	Air Leeches	V4	</p>
+<s>	Tsunami	V4	(9S) 2/18/26 </s><br>
+<s>	Tsunami Arete	V4	(F) 2/18/26 </s><br>
+<s>	Main Attraction V4	(L) 1/15/26</s><br>
+<p>	False Samurai	 V4	</p>
+<s>	Out of Africa 	V4	(3S) 1/25/26</s><br>
+<p>	Air Leeches 	V4	</p>
 <s>	Cocaine Corner	V4	(3S) 2/10/26 </s><br>
 <s>	MVFB	V4	(F) 2/10/26 </s><br>
 <s>	Hallow Man	V4	(F) 1/27/26</s><br>
 <s>	Pima Traverse	V4	(F) 1/9/26 </s><br>
 <p>	Mr. Schnebly	V4	</p>
-<p>	The Lecture	V4	</p>
+<s>	The Lecture	V4	(2S) 2/18/26 </s><br>
 <p>	Red Ruby	V4	</p>
 <s>	Pop Rocks	V4	(4S) 1/27/26</s><br>
 <p>	Muay Thai Friday	V4	</p>
@@ -166,7 +166,7 @@
 <s>	Fisticuffs	V5	(3S) 1/20/26</s><br>
 <p>	The Captain	V5	</p>
 <p>	Tenille	V5	</p>
-<p>	Table Topper	V5	</p>
+<s>	Table Topper	V5	(F) 2/18/26 </s><br>
 <p>	Seven Samurai	V5	</p>
 <s>	Shards Of Narsil	V5	(F) 1/27/26</s><br>
 <p>	Seven Samurai Direct	V5	</p>
@@ -187,7 +187,7 @@
 <p>	Sideshow Bob	V6	</p>
 <p>	Wheaties	V6	</p>
 <s>	Gritstone	V6	(F) 1/27/26</s><br>
-<p>	Wawa	V6	</p>
+<s>	Wawa	V6	(3S) 2/18/26 </s><br>
 <p>	Rip Curl	V6-7	</p>
 <s>	Hairy Cleavage	V7	(F) 1/25/26</s><br>
 <p>	Coyotes Choice	V7	</p>
