Refactor HTML structure and content for clarity

--- a/html/2026goals/pimapunisher.html
+++ b/html/2026goals/pimapunisher.html
@@ -263,11 +263,16 @@
 <br>
 
 <h2>2/18</h2>
-<p>Tsunami Arete V4</p>
-<p>Tsunami V4</p>
-<p>Wawa V6</p>
-<p>The Lecture V4</p>
-<p>Table Topper V5</p>
+<a href="https://www.youtube.com/shorts/Wey08MA87J4">
+<p>Tsunami Arete V4</p></a>
+<a href="https://www.youtube.com/shorts/ipYDxHopqVA">
+<p>Tsunami V4</p></a>
+<a href="https://www.youtube.com/shorts/jCxEU2YyUdw">
+<p>Wawa V6</p></a>
+<a href="https://www.youtube.com/watch?v=QsRn6lPs-9c">
+<p>The Lecture V4</p></a>
+<a href="https://www.youtube.com/shorts/FaRQl30UNpM">
+<p>Table Topper V5</p></a>
 <br>
 
 
@@ -275,6 +280,7 @@
 </center>
 
  </html>
+
 
 
 
