--- a/html/2026goals/pimapunisher.html
+++ b/html/2026goals/pimapunisher.html
@@ -275,7 +275,12 @@
 <p>Table Topper V5</p></a>
 <br>
 
-
+<h2>2/19</h2>
+<p>Seeing Red V3</p>
+<p>Clockwork Red V5</p>
+<p>Elephant Tree V6</p>
+<p>Muay Thai Friday V4</p>
+<br>
 	
 </center>
 
