--- a/html/2026goals/2026vpoint.html
+++ b/html/2026goals/2026vpoint.html
@@ -177,7 +177,7 @@
 <p>Tatoo Tiger V2</p>
 <br>
 
-<h2>Pima Canyon (2/18): 27</h2>
+<h2>Pima Canyon (2/18): 23</h2>
 <p>Tsunami Arete V4</p>
 <p>Tsunami V4</p>
 <p>Wawa V6</p>
@@ -185,7 +185,13 @@
 <p>Table Topper V5</p>
 <br>
 
-<h2>Total: 349</h2>
+<h2>Pima Canyon (2/19): 12</h2>
+<p>Seeing Red V3</p>
+<p>Clockwork Red V5</p>
+<p>Muay Thai Friday V4</p>
+<br>
+
+<h2>Total: 357</h2>
 
 </center>
 </html>
