Update status of climbing routes in punishertracker.html

--- a/html/2026goals/punishertracker.html
+++ b/html/2026goals/punishertracker.html
@@ -79,7 +79,7 @@
 <s>	Desperation Alley	V1	(F) 1/22/26 </s><br>
 <s>	Snap Crackle Pop	V1	(F) 1/25/26</s><br>
 <s>	Huckleberry Thin	V1	(F) 1/22/26 </s><br>
-<p>	3 D's Are Better Than 2	V1	</p>
+<s>	3 D's Are Better Than 2	V1	(BROKEN MAY GO HIGHER GRADE)</s><br>
 <s> Dilbert Unleashed	V1	(BROKEN MAY GO HIGHER GRADE)</s><br>
 <s>	Arrowhead	V1	(F) 1/22/26 </s><br>
 <s>	Can't Send Me to Rehab	V2	(F) 2/10/26 </s><br>
@@ -127,7 +127,7 @@
 <s> Iguana Head V3 (F) 1/9/26 </s><br>
 <p> Superfly V3 </p>
 <s>	Throw Some D's	V3	(F) 2/10/26 </s><br>
-<p>	Seeing Red	V3	</p>
+<s>	Seeing Red	V3	(F) 2/19/26 </s><br>
 <s>	Clamor and Filth of the Cultural Apparatus	V3	(NOT A BOULDER PROBLEM)</s><br>
 <p>	KG SOLOMAN 5000	V3	</p>
 <s>	Crackhead	V3	(NOT A BOULDER PROBLEM)</s><br>
@@ -154,7 +154,7 @@
 <s>	The Lecture	V4	(2S) 2/18/26 </s><br>
 <p>	Red Ruby	V4	</p>
 <s>	Pop Rocks	V4	(4S) 1/27/26</s><br>
-<p>	Muay Thai Friday	V4	</p>
+<s>	Muay Thai Friday	V4	(F) 2/19/26 </s><br>
 <s>	Crown Traverse	V4	(F) 1/15/26</s><br>
 <s>	MV Problem	V4	(F) 1/15/26</s><br>
 <s>	Sidewinder	V4	(F) 1/27/26</s><br>
@@ -175,12 +175,12 @@
 <s>	Every Coyote	V5	(BROKEN MAY GO HIGHER GRADE)</s><br>
 <s>	The Flake of Destiny	V5	(2S) 1/22/26 </s><br>
 <p>	Glove Knee	V5	</p>
-<p>	Clockwork Red	V5	</p>
+<s>	Clockwork Red	V5	(2S) 2/19/26 </s><br>
 <p>	Undertow	V5-6	</p>
 <p>	Table Dance	V6	</p>
 <p>	Black Wall	V6	</p>
 <p>	Caveman	V6	</p>
-<p>	Elephant Tree	V6	</p>
+<s>	Elephant Tree	V6	(L) 2/19/26 </s><br>
 <p>	Locomotion	V6	</p>
 <s>	Desperado	V6	(NOT A BOULDER PROBLEM)</s><br>
 <p>	Elephant Forest	V6	</p>
