Update Pima Punisher HTML with new climbs

--- a/html/2026goals/pimapunisher.html
+++ b/html/2026goals/pimapunisher.html
@@ -276,15 +276,20 @@
 <br>
 
 <h2>2/19</h2>
-<p>Seeing Red V3</p>
-<p>Clockwork Red V5</p>
-<p>Elephant Tree V6</p>
-<p>Muay Thai Friday V4</p>
+<a href="https://www.youtube.com/shorts/RhgW34QVKWw">
+<p>Seeing Red V3</p></a>
+<a href="https://www.youtube.com/shorts/1OvtaoqryxM">
+<p>Clockwork Red V5</p></a>
+<a href="https://www.youtube.com/shorts/bqWZr7JgT6E">
+<p>Elephant Tree V6</p></a>
+<a href="https://www.youtube.com/shorts/3176WzPPcs8">
+<p>Muay Thai Friday V4</p></a>
 <br>
 	
 </center>
 
  </html>
+
 
 
 
