--- a/html/2026goals/2026vpoint.html
+++ b/html/2026goals/2026vpoint.html
@@ -168,9 +168,9 @@
 <br>
 
 <h2>Superstitions (2/15): 19</h2>
-<p>Gamechanger V8 (S)</p>
-<p>The Reaper V7 (S)</p>
-<p>Day Walker V4 (S)</p>
+<p>Gamechanger V8 </p>
+<p>The Reaper V7 </p>
+<p>Day Walker V4 </p>
 <br>
 
 <h2>Pima Canyon (2/17): 2</h2>
@@ -191,7 +191,11 @@
 <p>Muay Thai Friday V4</p>
 <br>
 
-<h2>Total: 357</h2>
+<h2>Superstitions (2/20): 7</h2>
+<p>Final Cut V7</p>
+<br>
+
+<h2>Total: 364</h2>
 
 </center>
 </html>
