--- a/html/azcrags/supes.html
+++ b/html/azcrags/supes.html
@@ -76,6 +76,11 @@
 <p>The Mullet V0 (L)</p>
 <br>
 
+<h2>Cemetery 2/6/26</h2>
+<pWarmup V2 V2 (L)</p>
+<p>Final Cut V7 (S)</p>
+<br>
+
  </center>
  </html>
 
