--- a/html/2026goals/2026vpoint.html
+++ b/html/2026goals/2026vpoint.html
@@ -195,7 +195,11 @@
 <p>Final Cut V7</p>
 <br>
 
-<h2>Total: 364</h2>
+<h2>Superstitions (2/23): 5</h2>
+<p>Double Down V5</p>
+<br>
+
+<h2>Total: 369</h2>
 
 </center>
 </html>
