--- a/html/azcrags/supes.html
+++ b/html/azcrags/supes.html
@@ -77,8 +77,14 @@
 <br>
 
 <h2>Cemetery 2/6/26</h2>
-<pWarmup V2 V2 (L)</p>
+<p>Warmup V2 V2 (L)</p>
 <p>Final Cut V7 (S)</p>
+<br>
+
+<h2>Fortress 2/23/26</h2>
+<p>Keyhole V3 (L)</p>
+<p>Wonderboy V4 (L)</p>
+<p>Double Down V5</p>
 <br>
 
  </center>
