Update 2026 V-Point Challenge HTML content

--- a/html/2026goals/2026vpoint.html
+++ b/html/2026goals/2026vpoint.html
@@ -195,14 +195,22 @@
 <p>Final Cut V7</p>
 <br>
 
-<h2>Superstitions (2/23): 5</h2>
+<h2>Superstitions (2/22): 5</h2>
 <p>Double Down V5</p>
 <br>
 
-<h2>Total: 369</h2>
+<h2>Oak Flat (2/24): 19</h2>
+<p>RJG #131 V3</p>
+<p>Spark Plug V5</p>
+<p>Long Duck Dong V6</p>
+<p>Light Ice V5</p>
+<br>
+
+<h2>Total: 388</h2>
 
 </center>
 </html>
+
 
 
 
