Update pdraw.html with new climbing routes
Added new climbing routes and updated existing ones.

--- a/html/azcrags/pdraw.html
+++ b/html/azcrags/pdraw.html
@@ -32,8 +32,16 @@
 <p>Ultramega V4 (S)</p>
 <br>
 
+<h2>2/27/26: Monster, Anorexic, Mars Roof</h2>
+<p>Pinch A Loaf V2(S)</p>
+<p>Thinman V5 (L)</p>
+<p>Anorexic V6 (L)</p>
+<p>Meateater V7 (S)</p>
+<br>
+
  </center>
  </html>
+
 
 
 
