--- a/html/2026goals/2026vpoint.html
+++ b/html/2026goals/2026vpoint.html
@@ -206,10 +206,16 @@
 <p>Light Ice V5</p>
 <br>
 
-<h2>Total: 388</h2>
+<h2>Priest Draw (2/27): 9</h2>
+<p>Pinch A Loaf V2 (S)</p>
+<p>Meateater V7 (S)</p>
+<br>
+
+<h2>Total: 397</h2>
 
 </center>
 </html>
+
 
 
 
